dbent-derive/tests/ui/entity_no_struct.rs
use dbent::prelude::*;

#[derive(Entity)]
enum Test {
    Id(Key<Int>),
    Data(String),
}

fn main() {}
